--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "PATIENCE = 2\n",
     "\n",
     "class Model(tf.keras.Model) :\n",
-    "    def __init__(self, n_conv_layers = 1, n_filters = 32, vvg_dropout = 0.2, dense_dropout = 0.4) :\n",
+    "    def __init__(self, n_conv_layers = 1, n_filters = 32, convlayers_dropout = 0.2, dense_dropout = 0.4) :\n",
     "        super().__init__()\n",
     "        \n",
     "        # Data Augmentation\n",
@@ -102,15 +102,15 @@
     "        \n",
     "        self.rescaling = tf.keras.layers.Rescaling(1./255)\n",
     "        \n",
-    "        self.vvg = [] \n",
+    "        self.conv2dlayers = [] \n",
     "        \n",
     "        for i in range(n_conv_layers) :\n",
-    "            self.vvg.append(\n",
+    "            self.conv2dlayers.append(\n",
     "                    (\n",
     "                        tf.keras.layers.Conv2D(n_filters * (i + 1), 3, activation='relu', padding='same'),\n",
     "                        tf.keras.layers.MaxPool2D(),\n",
     "                        tf.keras.layers.BatchNormalization(),\n",
-    "                        tf.keras.layers.Dropout(vvg_dropout)\n",
+    "                        tf.keras.layers.Dropout(convlayers_dropout)\n",
     "                    )\n",
     "                )\n",
     "        \n",
@@ -156,7 +156,7 @@
     "]    \n",
     "    \n",
     "models = [\n",
-    "    ('64', Model(n_conv_layers=3, n_filters=64, vvg_dropout=0.3, dense_dropout=0.5)),\n",
+    "    ('64', Model(n_conv_layers=3, n_filters=64, convlayers_dropout=0.3, dense_dropout=0.5)),\n",
     "]"
    ]
   },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,8 +264,8 @@
      "output_type": "stream",
      "text": [
       "Model 64 prediction\n",
-      "87.86% cat\n",
-      "12.14% dog\n",
+      "93.88% cat\n",
+      "6.12% dog\n",
       "\n"
      ]
     }
